--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,24 @@
-certifi==2019.11.28
-Click==7.0
-Flask==1.1.1
+flask==1.1.2
+flask-pymongo==2.3.0
 Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.0
-itsdangerous==1.1.0
-Jinja2==2.11.1
 MarkupSafe==1.1.1
 numpy==1.18.1
-pandas==1.0.1
+pandas==1.2.1
 psycopg2==2.8.4
+pandoc==2.11
 python-dateutil==2.8.1
-pytz==2019.3
-six==1.14.0
-SQLAlchemy==1.3.13
-Werkzeug==0.16.1
-wincertstore==0.2
+pymongo==3.11.2
+SQLAlchemy==1.3.23
+sqlite==3.33.0
+scipy==1.6.0
 requests==2.22.0
-scikit-learn==0.22.2
+scikit-learn==0.23.2
+scikit-image=0.17.2
 datetime==4.3
+matplotlib==3.3.2
+matplotlib-base==3.3.2
+numpy==1.19.2
+numpy-base==1.19.2
+numpydoc==1.1.0
+jupyter==1.0.0
