--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ sqlite==3.33.0
 scipy==1.6.0
 requests==2.22.0
 scikit-learn==0.23.2
-scikit-image=0.17.2
+scikit-image==0.17.2
 datetime==4.3
 matplotlib==3.3.2
 matplotlib-base==3.3.2
